cmake_minimum_required(VERSION 3.13)
project(Imgae_Processing_Project_Phase_1)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(OpenCV_ROOT_DIR "C:\\opencv\\mingw-build\\install")
set(OpenCV_DIR "C:\\opencv\\mingw-build\\instal")
#set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
FIND_PACKAGE(OpenCV REQUIRED PATHS C:\\opencv\\mingw-build\\install NO_DEFAULT_PATH)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(Imgae_Processing_Project_Phase_1 main.cpp)
#add_executable(Imgae_Processing_Project_Phase_1 test2.cpp)
#add_executable(Imgae_Processing_Project_Phase_1 test3.cpp)
#add_executable(Imgae_Processing_Project_Phase_1 test4.cpp)
#add_executable(Imgae_Processing_Project_Phase_1 test5.cpp)
#add_executable(Imgae_Processing_Project_Phase_1 test6.cpp)
#add_executable(Imgae_Processing_Project_Phase_1 test7.cpp)
#add_executable(Imgae_Processing_Project_Phase_1 test8.cpp)
set(OpenCV_LIBS opencv_core opencv_imgproc opencv_highgui opencv_imgcodecs opencv_objdetect)
target_link_libraries(Imgae_Processing_Project_Phase_1 ${OpenCV_LIBS})
